[package]
name = "esp-idf-template"
version = "0.1.0"
authors = ["lilpum <lilpum1224@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
esp-idf-sys = { version = "0.32.0", features = ["binstart"] }
esp-idf-hal = "0.40.0"       # A Hardware abstraction layer for Espressif's ESP family of microcontrollers based on the ESP-IDF f…
embedded-hal = "0.2.7"
anyhow = "1.0.66"
num = "0.4.0"
[build-dependencies]
embuild = "0.30.4"
anyhow = "1"
